[gd_scene load_steps=48 format=3 uid="uid://clygksee8mxva"]

[ext_resource type="Script" uid="uid://ctpmpokbqupi6" path="res://scripts/bargaining_script.gd" id="1_44wjt"]
[ext_resource type="Shader" uid="uid://dfv3r5ddvi64k" path="res://shaders/viewport-stilisation.gdshader" id="1_jx48u"]
[ext_resource type="Texture2D" uid="uid://o4k327x07qpt" path="res://sprites/bargaining-level-palette-1x.png" id="2_jx48u"]
[ext_resource type="PackedScene" uid="uid://fbc2xb6crcix" path="res://scenes/scene_transition_animation.tscn" id="3_bqwpu"]
[ext_resource type="Script" uid="uid://pxom27aj2sbu" path="res://player-movement.gd" id="4_sb4qu"]
[ext_resource type="Texture2D" uid="uid://dm614t4vt8t6j" path="res://assets/wood_planks_05_2k/wood_planks_05_color_2k.png" id="5_22ggt"]
[ext_resource type="Texture2D" uid="uid://bebwn3i4x0pi2" path="res://sprites/f-icon.png" id="5_xtj8l"]
[ext_resource type="Texture2D" uid="uid://dyseviy52i6ua" path="res://sprites/talking.png" id="6_00jnx"]
[ext_resource type="Texture2D" uid="uid://c3cqyjrmdt00i" path="res://assets/wood_planks_05_2k/wood_planks_05_normal_gl_2k.png" id="6_b4c28"]
[ext_resource type="PackedScene" uid="uid://bt8yplhemifca" path="res://scenes/spirit-character.tscn" id="7_0cvyk"]
[ext_resource type="Texture2D" uid="uid://c1ud3dlokf3q" path="res://assets/wood_planks_05_2k/wood_planks_05_roughness_2k.png" id="7_yn50f"]
[ext_resource type="ArrayMesh" uid="uid://bchar7db5p51q" path="res://assets/bargaining-path.obj" id="9_00jnx"]
[ext_resource type="Script" uid="uid://cg3d0qbbovt8n" path="res://scripts/Textbox.gd" id="9_xtj8l"]
[ext_resource type="Theme" uid="uid://c4h4g480ssbxo" path="res://themes/panel-theme.tres" id="10_00jnx"]
[ext_resource type="FontFile" uid="uid://g1yjaor6bxfu" path="res://fonts/zig_____.ttf" id="11_0cvyk"]
[ext_resource type="PackedScene" uid="uid://ds0g6gm8hlami" path="res://scenes/street-lamp.tscn" id="13_0cvyk"]
[ext_resource type="PackedScene" uid="uid://bv857sn532jag" path="res://assets/entrance-casino.tscn" id="14_ov50e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ov50e"]
shader = ExtResource("1_jx48u")
shader_parameter/num_colors = 9
shader_parameter/PALETTE_TEXTURE = ExtResource("2_jx48u")

[sub_resource type="BoxShape3D" id="BoxShape3D_fki7y"]
size = Vector3(50, 0.01, 20)

[sub_resource type="Gradient" id="Gradient_ht3j6"]
colors = PackedColorArray(0.0699999, 0.84, 0, 1, 0.0775, 0.15, 0, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_22ggt"]
noise_type = 3
seed = 213
frequency = 0.0077
fractal_type = 2
cellular_jitter = 0.5
domain_warp_enabled = true
domain_warp_type = 2
domain_warp_amplitude = 59.56
domain_warp_frequency = 0.01
domain_warp_fractal_octaves = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_dmj2s"]
width = 1280
height = 1280
generate_mipmaps = false
seamless = true
seamless_blend_skirt = 0.34
color_ramp = SubResource("Gradient_ht3j6")
noise = SubResource("FastNoiseLite_22ggt")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b4c28"]
diffuse_mode = 3
specular_mode = 1
disable_ambient_light = true
albedo_texture = SubResource("NoiseTexture2D_dmj2s")
metallic_specular = 0.0

[sub_resource type="PlaneMesh" id="PlaneMesh_yn50f"]
size = Vector2(10, 20)

[sub_resource type="PlaneMesh" id="PlaneMesh_22ggt"]
size = Vector2(10.83, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ov50e"]
albedo_texture = ExtResource("5_22ggt")
metallic_specular = 0.3
roughness_texture = ExtResource("7_yn50f")
normal_enabled = true
normal_scale = 5.61
normal_texture = ExtResource("6_b4c28")
uv1_scale = Vector3(5.99, 5.99, 5.99)

[sub_resource type="BoxShape3D" id="BoxShape3D_dxdep"]
size = Vector3(41.3777, 1, 0.318848)

[sub_resource type="BoxShape3D" id="BoxShape3D_rlqws"]
size = Vector3(43.4979, 1, 0.526367)

[sub_resource type="BoxShape3D" id="BoxShape3D_5vsvv"]
size = Vector3(25.724, 1, 0.376)

[sub_resource type="BoxShape3D" id="BoxShape3D_4hfym"]
size = Vector3(0.403198, 1, 22.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_ltw57"]
size = Vector3(0.387207, 0.359436, 0.395996)

[sub_resource type="BoxMesh" id="BoxMesh_4ns6u"]
size = Vector3(0.37, 0.37, 0.37)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xf4lk"]
specular_mode = 1
albedo_color = Color(0.75, 0.75, 0.75, 1)
metallic_specular = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_iijyl"]
atlas = ExtResource("6_00jnx")
region = Rect2(0, 0, 31, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7fh2"]
atlas = ExtResource("6_00jnx")
region = Rect2(31, 0, 31, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_27idm"]
atlas = ExtResource("6_00jnx")
region = Rect2(62, 0, 31, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbavh"]
atlas = ExtResource("6_00jnx")
region = Rect2(93, 0, 31, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_74a3a"]
atlas = ExtResource("6_00jnx")
region = Rect2(124, 0, 31, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_hvvsy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iijyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7fh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27idm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbavh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74a3a")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_8v7iv"]
size = Vector3(0.090332, 1, 17.2031)

[sub_resource type="Gradient" id="Gradient_00jnx"]
offsets = PackedFloat32Array(0, 0.913669)
colors = PackedColorArray(0.41024, 0.41024, 0.41024, 1, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_00jnx"]
domain_warp_enabled = true
domain_warp_amplitude = 81.98
domain_warp_frequency = 0.01
domain_warp_fractal_octaves = 6
domain_warp_fractal_gain = 2.63

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_0cvyk"]
width = 802
height = 1920
color_ramp = SubResource("Gradient_00jnx")
noise = SubResource("FastNoiseLite_00jnx")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_00jnx"]
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.631715, 0.631715, 0.631715, 1)
albedo_texture = SubResource("NoiseTexture2D_0cvyk")
metallic = 0.43
roughness = 0.39

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ov50e"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fki7y"]
border_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ht3j6"]
font = ExtResource("11_0cvyk")
font_size = 28

[node name="Bargaining" type="Node3D"]
script = ExtResource("1_44wjt")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_ov50e")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="bargaining-camera" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.951057, 0.309017, 0, -0.309017, 0.951057, 0, 4, 12)
projection = 1
fov = 50.0
size = 5.5
far = 60.0

[node name="scene_transition_animation" parent="SubViewportContainer/SubViewport" instance=ExtResource("3_bqwpu")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-0.392906, -0.785099, 0.478795, -0.467856, 0.61891, 0.630921, -0.791666, 0.0238858, -0.610486, 0, 1.20129, 0)
light_energy = 0.876
shadow_enabled = true
shadow_bias = 0.02
shadow_normal_bias = 2.89
shadow_opacity = 0.79
shadow_blur = 5.449

[node name="Floor" type="StaticBody3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0977321, 0, 0)

[node name="floor-collider" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0)
shape = SubResource("BoxShape3D_fki7y")
debug_color = Color(0, 0.85, 1, 0.168627)

[node name="floor-left" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Floor/floor-collider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 0)
material_override = SubResource("StandardMaterial3D_b4c28")
mesh = SubResource("PlaneMesh_yn50f")
skeleton = NodePath("../..")

[node name="floor-right" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Floor/floor-collider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0)
material_override = SubResource("StandardMaterial3D_b4c28")
mesh = SubResource("PlaneMesh_yn50f")
skeleton = NodePath("../..")

[node name="floor-right2" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Floor/floor-collider"]
transform = Transform3D(0.99865, 0, -0.0519525, 0, 1, 0, 0.0519526, 0, 0.99865, 5, -0.001, 0)
mesh = SubResource("PlaneMesh_22ggt")
surface_material_override/0 = SubResource("StandardMaterial3D_ov50e")

[node name="floor-right3" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Floor/floor-collider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0)
material_override = SubResource("StandardMaterial3D_b4c28")
mesh = SubResource("PlaneMesh_yn50f")
skeleton = NodePath("../floor-right2")

[node name="restriction-bottom" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Floor"]
transform = Transform3D(-1, 0, -8.74229e-08, 0, 1, 0, 8.74229e-08, 0, -1, 14.8523, 0, 9.51673)
shape = SubResource("BoxShape3D_dxdep")
debug_color = Color(0, 0.85, 1, 1)
debug_fill = false

[node name="restriction-top" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Floor"]
transform = Transform3D(-1, 0, -8.74229e-08, 0, 1, 0, 8.74229e-08, 0, -1, 15.5858, 0, -8.74549)
shape = SubResource("BoxShape3D_rlqws")
debug_color = Color(0, 0.85, 1, 1)
debug_fill = false

[node name="restriction-left" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Floor"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5.15933, 0, 0.137418)
shape = SubResource("BoxShape3D_5vsvv")
debug_color = Color(0, 0.85, 1, 1)
debug_fill = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35.2823, 0, 0)
shape = SubResource("BoxShape3D_4hfym")
debug_color = Color(0, 0.595, 0.7, 1)

[node name="CharacterBody3D" type="CharacterBody3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0570268, 0)
script = ExtResource("4_sb4qu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/CharacterBody3D"]
transform = Transform3D(0.452481, 0, 0.891774, 0, 1, 0, -0.891774, 0, 0.452481, -0.0563965, 0.126718, 0.052002)
shape = SubResource("BoxShape3D_ltw57")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/CharacterBody3D/CollisionShape3D"]
transform = Transform3D(0.999996, 0, -0.00300196, 0, 1, 0, 0.00300196, 0, 0.999996, 0, -0.0138851, 0)
mesh = SubResource("BoxMesh_4ns6u")
surface_material_override/0 = SubResource("StandardMaterial3D_xf4lk")

[node name="pressFIndicator" type="Sprite3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1.25, 0, 0, 0, 1.25, 0, 0, 0, 1.25, -7.86208, 0.744362, 0)
billboard = 1
texture_filter = 0
texture = ExtResource("5_xtj8l")

[node name="talking_indicator" type="AnimatedSprite3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -7.5353, 1.28151, 0)
billboard = 1
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_hvvsy")
autoplay = "default"

[node name="area-1" type="Area3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.66038, 0.5498, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/area-1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00436223, 0, 0.421875)
shape = SubResource("BoxShape3D_8v7iv")

[node name="area-2" type="Area3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.39723, 0.55, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/area-2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00436223, 0, 0.421875)
shape = SubResource("BoxShape3D_8v7iv")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/area-2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.25005, 0, 0.422)
shape = SubResource("BoxShape3D_8v7iv")

[node name="area-3" type="Area3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.4055, 0.55, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/area-3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00436223, 0, 0.421875)
shape = SubResource("BoxShape3D_8v7iv")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/area-3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.21124, 0, 0.422)
shape = SubResource("BoxShape3D_8v7iv")

[node name="area-4" type="Area3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25.3572, 0.55, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/area-4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00436223, 0, 0.421875)
shape = SubResource("BoxShape3D_8v7iv")

[node name="Spirit-Character" parent="SubViewportContainer/SubViewport" instance=ExtResource("7_0cvyk")]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 10.4141, 0, -1.00303)

[node name="stone-path" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-3.27835e-08, 0, 0.75, 0, 0.75, 0, -0.75, 0, -3.27835e-08, 7.39211, -0.00823581, 0)
mesh = ExtResource("9_00jnx")
surface_material_override/0 = SubResource("StandardMaterial3D_00jnx")

[node name="stone-path2" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-3.27835e-08, 0, -0.75, 0, 0.75, 0, 0.75, 0, -3.27835e-08, -7.80688, -0.00823581, 0)
mesh = ExtResource("9_00jnx")
surface_material_override/0 = SubResource("StandardMaterial3D_00jnx")

[node name="street-lamp" parent="SubViewportContainer/SubViewport" instance=ExtResource("13_0cvyk")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 6.59443, -0.0423235, -1.98428)

[node name="street-lamp2" parent="SubViewportContainer/SubViewport" instance=ExtResource("13_0cvyk")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 8.97052, -0.0423235, -1.98428)

[node name="street-lamp9" parent="SubViewportContainer/SubViewport" instance=ExtResource("13_0cvyk")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 20.148, -0.0423235, -1.98428)

[node name="street-lamp3" parent="SubViewportContainer/SubViewport" instance=ExtResource("13_0cvyk")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 11.0321, -0.0423235, -1.98428)

[node name="street-lamp4" parent="SubViewportContainer/SubViewport" instance=ExtResource("13_0cvyk")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 13.0512, -0.0423235, -1.98428)

[node name="street-lamp5" parent="SubViewportContainer/SubViewport" instance=ExtResource("13_0cvyk")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 6.32627, -0.0423235, 2.14944)

[node name="street-lamp6" parent="SubViewportContainer/SubViewport" instance=ExtResource("13_0cvyk")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 8.56782, -0.0423235, 2.14944)

[node name="street-lamp7" parent="SubViewportContainer/SubViewport" instance=ExtResource("13_0cvyk")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 10.6521, -0.0423235, 2.14944)

[node name="street-lamp8" parent="SubViewportContainer/SubViewport" instance=ExtResource("13_0cvyk")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 12.8713, -0.0423235, 2.14944)

[node name="entrance-casino" parent="SubViewportContainer/SubViewport" instance=ExtResource("14_ov50e")]
transform = Transform3D(0.994522, 0, 0.104528, 0, 1, 0, -0.104528, 0, 0.994522, 14.8164, 0, -0.214925)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("9_xtj8l")

[node name="DialogueBox" type="MarginContainer" parent="CanvasLayer"]
texture_filter = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -163.0
offset_right = -27.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("10_00jnx")

[node name="Panel" type="Panel" parent="CanvasLayer/DialogueBox"]
texture_filter = 1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ov50e")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/DialogueBox"]
texture_filter = 1
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Panel" type="Panel" parent="CanvasLayer/DialogueBox/MarginContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fki7y")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/DialogueBox/MarginContainer"]
texture_filter = 1
layout_mode = 2

[node name="Start" type="Label" parent="CanvasLayer/DialogueBox/MarginContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(22, 0)
layout_mode = 2
size_flags_vertical = 0
text = "*"
label_settings = SubResource("LabelSettings_ht3j6")

[node name="Label" type="Label" parent="CanvasLayer/DialogueBox/MarginContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Placeholder Text ahahahahah Placeholder Text ahahahahah Placeholder Text ahahahahah Placeholder Text ahahahahah ahahahahah"
label_settings = SubResource("LabelSettings_ht3j6")
autowrap_mode = 2
clip_text = true
visible_characters = 0
visible_ratio = 0.0

[node name="End" type="Label" parent="CanvasLayer/DialogueBox/MarginContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(22, 0)
layout_mode = 2
size_flags_vertical = 8
text = "v"
label_settings = SubResource("LabelSettings_ht3j6")

[connection signal="body_entered" from="SubViewportContainer/SubViewport/area-1" to="." method="_on_area_1_body_entered"]
[connection signal="body_entered" from="SubViewportContainer/SubViewport/area-2" to="." method="_on_area_2_body_entered"]
[connection signal="body_entered" from="SubViewportContainer/SubViewport/area-3" to="." method="_on_area_3_body_entered"]
[connection signal="body_entered" from="SubViewportContainer/SubViewport/area-4" to="." method="_on_area_4_body_entered"]
[connection signal="stop_movement" from="CanvasLayer" to="SubViewportContainer/SubViewport/CharacterBody3D" method="_on_canvas_layer_stop_movement"]
